fixed css styling on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,10 @@
 * {
-  /*border: 1px solid black;*/
   box-sizing: border-box;
 }
 
 body {
   padding: 0;
   margin: 0;
-  border: 1 px solid black;
   font-family: sans-serif;
   color: #c3cbd8;
   background-color: #828da0;
@@ -17,21 +15,11 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: auto;
-  grid-template-areas:
-    "left-nav" "map";
 }
 
 #left-nav {
-  height: 100vh;
   grid-area: left-nav;
   background: black;
-  display: flex;
-  flex-wrap: wrap;
-  /*Forces child elements to accept curved border*/
-  overflow: hidden;
 }
 
 #list-name,
@@ -41,35 +29,11 @@ body {
   margin: 0;
 }
 
-#list-name {
-  height: 10%;
-}
-
-p#name {
-  margin: 0;
-  padding-left: 1em;
-  padding-top: .5em;
-  text-align: left;
-  font-size: 1.5em;
-}
-
-#search-area {
-  height: 5%;
-  background-color: white;
-  display: flex;
-}
-
-#search-box {
-  width: 70%;
-  padding: 1em;
-  font-size: .75em;
-}
-
-/*WHY ARE THE CORNERS ROUND?*/
 #search-button {
   height: 100%;
   font-size: 1em;
   border: none;
+  border-radius: 0;
   margin: 0;
   width: 30%;
   background-image: linear-gradient(to bottom, #54b4f5, #1b74ab);
@@ -92,8 +56,6 @@ li:hover {
 }
 
 #menu-items {
-  height: 85%;
-  font-size: 1em;
   cursor: pointer;
 }
 
@@ -102,25 +64,17 @@ div.infoWindow {
   text-align: center;
 }
 
-/*For smaller screens, change side nav to top filter*/
+/* For smaller screens, change side nav to top menu */
 @media (max-width: 768px) {
-  #container {
-    grid-template-rows: 50px auto;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-    "left-nav"
-    "map";
-  }
 
   #left-nav {
-    display: block;
-    height: 325px;
-    z-index: 2;
+    height: auto;
   }
 
   #list-name {
     width: 100%;
-    height: 25px;
+    height: 35px;
+    padding: 5px;
   }
 
   p#name {
@@ -132,25 +86,80 @@ div.infoWindow {
 
   #search-area {
     width: 100%;
-    height: 25px;
+    display: flex;
+    height: 30px;
+  }
+
+  #search-box {
+    width: 80%;
+    height: 100%;
+    border: none;
+    padding: 10px;
+  }
+
+  #search-button {
+    width: 20%;
   }
 
   #menu-items ul {
-    column-count: 3;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     height: auto;
+    max-height: 370px;
   }
 
-  li {
-    align-items: left;
+  #map {
+    width: 100%;
+    height: 100vh;
   }
 }
 
-/*#left-nav {
-  height: 100vh;
-  width: 30%;
-  background-color: blue;
-  border: 1px solid black;
-  float: left;
-  margin: 0;
-  text-align: center;
-}*/
+/* For larger screens */
+
+@media (min-width: 769px) {
+  #container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "left-nav" "map";
+  }
+
+  #left-nav {
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    /*Forces child elements to accept curved border*/
+    overflow: hidden;
+  }
+
+  #list-name {
+    height: 10%;
+  }
+
+  p#name {
+    margin: 0;
+    padding-left: 1em;
+    padding-top: .5em;
+    text-align: left;
+    font-size: 1.5em;
+  }
+
+  #search-area {
+    height: 5%;
+    background-color: white;
+    display: flex;
+  }
+
+  #search-box {
+    width: 70%;
+    padding: 1em;
+    font-size: .75em;
+  }
+
+  #menu-items {
+    height: 85%;
+    font-size: 1em;
+  }
+}
